--- a/Portfolio.html
+++ b/Portfolio.html
@@ -39,9 +39,9 @@
         <h2>About Me</h2>
             <p>Hello, everyone! My name is Brad, I am a USAF Veteran, currently working as an Assistant Language Teacher (ALT) in 
                 <br>Yamaguchi, Japan. During my time in the Air Force, I spent one year each in Louisiana and South Korea, and a little over
-                <br>three years in Italy. I moved to Japan in May of 2017 in order to begin my undergraduate degree at Temple University, Japan
-                <br>Campus in Tokyo. In December 2020, I graduated with a BA in Asian Studies, focusing on Gender Inequality in Japan. Since
-                <br>graduation, I have moved to Yamaguchi where I teach English to elementary and preschool aged children. 
+                <br>three years in Italy. After I left the military, I moved to Japan in May of 2017 in order to begin my undergraduate degree at 
+                <br>Temple University, Japan Campus in Tokyo. In December 2020, I graduated with a BA in Asian Studies, focusing on Gender 
+                <br>Inequality in Japan. Since graduation, I have moved to Yamaguchi where I teach English to elementary and preschool aged children. 
             </p>
         <h2>Hobbies</h2>
             <ul>
@@ -57,5 +57,19 @@
                 <li>Peacemaker</li>
                 <li>What We Do in the Shadows</li>
             </ol>
+        <h2>Contact Me</h2>
+            <form action="/process" method="post">
+                <label>Name: </label>
+                <input type="text" name="name" placeholder="Name">
+                <label>Email: </label>
+                <input type="text" name="email" placeholder="Email">
+                <div>
+                    <label>Message:</label>
+                </div>
+                <textarea name="comment" cols="30" rows="5"></textarea>
+                <div>
+                    <input type="submit" value="Send Message">
+                </div>
+            </form>
     </body>
 </html>
